--- a/.env
+++ b/.env
@@ -1,1 +1,28 @@
-TIX_IMAGE_SOURCE=localhost
+# Images to use
+TIX_IMAGE_API=localhost/tix-api
+TIX_IMAGE_IPTOAS=localhost/tix-ip-to-as
+TIX_IMAGE_WEB=localhost/tix-web
+TIX_IMAGE_TIME_SERVER=localhost/tix-time-server
+TIX_IMAGE_TIME_CONDENSER=localhost/tix-time-condenser
+TIX_IMAGE_TIME_PROCESSOR=localhost/tix-time-processor
+
+# Filesystem locations backing persistent data
+TIX_MYSQL_VOLUME_ROOT=/storage/docker/mysql-datadir
+TIX_IPTOAS_VOLUME_ROOT=/storage/docker/iptoas-datadir
+TIX_REPORTS_VOLUME_ROOT=/storage/docker/reports-datadir
+
+# RabbitMQ definitions
+RABBITMQ_DEFAULT_VHOST=/
+RABBITMQ_ERLANG_COOKIE=secret_cookie
+
+# Public hosts
+TIX_API_PUBLIC_HOST=localhost
+TIX_API_PUBLIC_PORT=3001
+TIX_API_PUBLIC_SSL=True
+TIX_WEB_PUBLIC_HOST=localhost
+TIX_WEB_PUBLIC_PORT=3000
+
+# Internal hosts (by default, the defined services)
+TIX_API_HOST=tix-api
+TIX_MYSQL_HOST=mysql
+TIX_RABBITMQ_HOST=rabbitmq
