Use private api port for internal services

--- a/.env
+++ b/.env
@@ -13,11 +13,14 @@ RABBITMQ_ERLANG_COOKIE=secret_cookie
 # Public hosts
 TIX_API_PUBLIC_HOST=localhost
 TIX_API_PUBLIC_PORT=3001
-TIX_API_PUBLIC_SSL=True
 TIX_WEB_PUBLIC_HOST=localhost
 TIX_WEB_PUBLIC_PORT=3000
 
 # Internal hosts (by default, the defined services)
-TIX_API_HOST=tix-api
+TIX_API_INTERNAL_HOST=tix-api
+TIX_API_INTERNAL_PORT=3002
+TIX_API_INTERNAL_SSL=True
+
 TIX_MYSQL_HOST=mysql
+
 TIX_RABBITMQ_HOST=rabbitmq
