Add log level to configurations

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+# Log Level (FATAL, ERROR, WARN, INFO, DEBUG, TRACE, ALL)
+LOG_LEVEL=ALL
+
 # Images to use
 TIX_IMAGE_API=localhost/tix-api
 TIX_IMAGE_IPTOAS=localhost/tix-ip-to-as
@@ -9,6 +12,8 @@ TIX_IMAGE_TIME_PROCESSOR=localhost/tix-time-processor
 # RabbitMQ definitions
 RABBITMQ_DEFAULT_VHOST=/
 RABBITMQ_ERLANG_COOKIE=secret_cookie
+
+TIX_SERVER_CONDENSER_QUEUE=server-condenser-queue
 
 # Public hosts
 TIX_API_PUBLIC_HOST=localhost
