Change which database data is/will be stored as a secret

--- a/.env
+++ b/.env
@@ -9,6 +9,10 @@ TIX_IMAGE_TIME_SERVER=localhost/tix-time-server
 TIX_IMAGE_TIME_CONDENSER=localhost/tix-time-condenser
 TIX_IMAGE_TIME_PROCESSOR=localhost/tix-time-processor
 
+# Database definitions
+MYSQL_ROOT_PASSWORD=root
+TIX_MYSQL_DATABASE=tix
+
 # RabbitMQ definitions
 RABBITMQ_DEFAULT_VHOST=/
 RABBITMQ_ERLANG_COOKIE=secret_cookie
