Add new MySQL database and configurations

--- a/.env
+++ b/.env
@@ -30,6 +30,12 @@ TIX_API_INTERNAL_HOST=tix-api
 TIX_API_INTERNAL_PORT=3002
 TIX_API_INTERNAL_SSL=False
 
+# MySQL hosts
+TIX_API_MYSQL_USERS_HOST=mysql-users
+TIX_API_MYSQL_USERS_PORT=3307
+TIX_API_MYSQL_STATS_HOST=mysql-stats
+TIX_API_MYSQL_STATS_PORT=3308
+
 TIX_MYSQL_HOST=mysql
 
 TIX_RABBITMQ_HOST=rabbitmq
