Replace celery/disk based condenser-processor communication with rabbit based communication

--- a/.env
+++ b/.env
@@ -18,6 +18,7 @@ RABBITMQ_DEFAULT_VHOST=/
 RABBITMQ_ERLANG_COOKIE=secret_cookie
 
 TIX_SERVER_CONDENSER_QUEUE=server-condenser-queue
+TIX_CONDENSER_PROCESSOR_QUEUE=condenser-processor-queue
 
 # Public hosts
 TIX_API_PUBLIC_HOST=localhost
