Read database creation script from docker image instead of filesystem mount

--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@
 LOG_LEVEL=ALL
 
 # Images to use
+TIX_USER_DB=localhost/tix-user-db
+TIX_STAT_DB=localhost/tix-stat-db
 TIX_IMAGE_API=localhost/tix-api
 TIX_IMAGE_IPTOAS=localhost/tix-ip-to-as
 TIX_IMAGE_WEB=localhost/tix-web
